--- a/index.html
+++ b/index.html
@@ -3,9 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Professional Portfolio</title>
 </head>
 <body>
-    
+    <head>
+
+    </head>
+    <main>
+
+    </main>
+    <footer>
+        
+    </footer>
 </body>
 </html>
