--- a/index.html
+++ b/index.html
@@ -3,15 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <title>Professional Portfolio</title>
 </head>
 <body>
-    <head>
-
-    </head>
-    <main>
-
-    </main>
+    <div class="container">
+        <section class="section-1">
+            <h1 class="section-1-heading">Web Developer</h1>
+            <img src="images/john-smith.jpg" alt="John Smith"class="person-img">
+            <h3 class="person-name">John Smith</h3>
+            <a href="#"class="section-1-btn">Projects</a>
+        </section>
+    </div>
     <footer>
         
     </footer>
