--- a/index.html
+++ b/index.html
@@ -9,12 +9,21 @@
 </head>
 <body>
     <div class="container">
-        <section class="section-1">
+        <section class="section-1 center">
             <h1 class="section-1-heading">Web Developer</h1>
             <img src="images/john-smith.jpg" alt="John Smith"class="person-img">
             <h3 class="person-name">John Smith</h3>
             <a href="#"class="section-1-btn">Projects</a>
         </section>
+        <!-- navbar -->
+        <nav class="navbar center">
+            <a href="#"class="navbar-link">Home</a>
+            <a href="#"class="navbar-link">About</a>
+            <a href="#"class="navbar-link">Portfolio</a>
+            <a href="#"class="navbar-link">Contact</a>
+        </nav>
+        <!-- end of navbar -->
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     </div>
     <footer>
         
